--- a/main.html
+++ b/main.html
@@ -8,6 +8,40 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form method="post">
+		<label for="name">Name</label>
+		<input type="text" placeholder="Name">
+		<br>
+		<label for="email">Email</label>
+		<input type="Email" placeholder="Email" > 
+		<br>
+		<label >gender_m</label>
+		<input type="radio" >
+		<br>
+		<label >gender_f</label>
+		<input type="radio" >
+		<br>
+		<label for="cars" >Car Brands</label>
+		<select>
+			<option></option>
+			<option></option>
+		</select>
+		<br>
+		<label for="age">Age</label>
+		<input type="number" placeholder="Age">
+		<br>
+		<label for="dob">DOB</label>
+		<input type="date" >
+		<br>
+		<label for="tel">Phone Number</label>
+		<input type="tel" placeholder="xxx-xxx-xxxx">
+		<br>
+		<label for="	password">Password</label>
+		<input type="password" placeholder="Password">
+		<br>
+		<label for="tos">I agree to the TOS</label>
+		<input type="checkbox">
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
