--- a/main.html
+++ b/main.html
@@ -43,6 +43,8 @@
 		<br>
 		<label for="tos"><input type="checkbox" id="tos"required >
 			I agree to the TOS</label>
+		<br>
+		<button>submit</button>
 		
 	</form>
     <script type="text/javascript" src="./script.js">
