--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 		<label for="email">Email</label>
 		<input type="Email" id="email" placeholder="Email" required> 
 		<br>
-		<label >Gender</label>
+		<label for="Gender" name="Gender">Gender</label>
 		<input type="Radio" id="gender_m" required>
 		<label for="gender_m">Male</label>
 		<input type="Radio" id="gender_f" required>
@@ -44,7 +44,7 @@
 		<label for="tos"><input type="checkbox" id="tos"required >
 			I agree to the TOS</label>
 		<br>
-		<button>submit</button>
+		<button type="submit">submit</button>
 		
 	</form>
     <script type="text/javascript" src="./script.js">
