--- a/main.html
+++ b/main.html
@@ -15,10 +15,10 @@
 		<label for="email">Email</label>
 		<input type="Email" id="email" placeholder="Email" required> 
 		<br>
-		<label for="Gender" name="Gender">Gender</label>
-		<input type="Radio" id="gender_m" required>
+		<label for="Gender"  >Gender</label>
+		<input name="Gender" type="Radio" id="gender_m" required>
 		<label for="gender_m">Male</label>
-		<input type="Radio" id="gender_f" required>
+		<input  name="Gender" type="Radio" id="gender_f" required>
 		<label for="gender_f">female</label>
 		
 		<br>
@@ -38,7 +38,7 @@
 		<label for="tel">Phone Number</label>
 		<input type="tel" id ="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="xxx-xxx-xxxx">
 		<br>
-		<label for="	password">Password</label>
+		<label for="password">Password</label>
 		<input type="password" id="password" placeholder="Password" required>
 		<br>
 		<label for="tos"><input type="checkbox" id="tos"required >
