--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 		<label for="Gender" >Gender</label>
 		<input name="Gender" type="Radio" id="gender_m" required>
 		<label for="gender_m">Male</label>
-		<input  name="Gender" type="Radio" id="gender_f" required>
+		<input  name="gender" type="Radio" id="gender_f" required>
 		<label for="gender_f">female</label>
 		
 		<br>
