--- a/main.html
+++ b/main.html
@@ -17,9 +17,9 @@
 		<br>
 		<label for="Gender" >Gender</label>
 		<input name="Gender" type="Radio" id="gender_m" required>
-		<label for="gender_m">Male</label>
-		<input  name="gender" type="Radio" id="gender_f" required>
-		<label for="gender_f">female</label>
+		<label for="gender">Male</label>
+		<input  name="gender_f" type="Radio" id="gender_f" required>
+		<label for="gender_f">Female</label>
 		
 		<br>
 		<label for="cars" >Car Brands</label>
