--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	
+    <script type="text/javascript" src="./script.js">
 	<form method="post">
 		<label for="name">Name</label>
 		<input type="Text" id="name" placeholder="Name" required>
@@ -16,9 +18,9 @@
 		<input type="Email" id="email" placeholder="Email" required> 
 		<br>
 		<label for="Gender" >Gender</label>
-		<input name="Gender" type="Radio" id="gender_m" required>
-		<label for="gender">Male</label>
-		<input  name="gender_f" type="Radio" id="gender_f" required>
+		<input name="Gender" type="radio" id="gender_m" required>
+		<label for="gender_m">Male</label>
+		<input  name="gender_f" type="radio" id="gender_f" required>
 		<label for="gender_f">Female</label>
 		
 		<br>
@@ -47,7 +49,6 @@
 		<button type="submit">submit</button>
 		
 	</form>
-    <script type="text/javascript" src="./script.js">
 </script>
 
 </body>
