--- a/main.html
+++ b/main.html
@@ -17,11 +17,12 @@
 		<label for="email">Email</label>
 		<input type="Email" id="email" placeholder="Email" required> 
 		<br>
-		<label for="Gender" >Gender</label>
-		<input name="Gender" type="radio" id="gender_m" required>
-		<label for="gender_m">Male</label>
-		<input  name="gender_f" type="radio" id="gender_f" required>
+		<label>Gender</label>
+		<label for="Gender_m" >Male</label>
+		<input name="Gender" type="radio" id="gender_m" value="male">
 		<label for="gender_f">Female</label>
+		<input  name="gender_f" type="radio" id="gender_f" value="female">
+		
 		
 		<br>
 		<label for="cars" >Car Brands</label>
